--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,10 +1,18 @@
 body
 {
-
+    background: #1e1f24;
     color: blue;
+    text-align: left;
+    font-family: helvetica;
+}
 
-text-align: left;
-font-family: helvetica;
+
+
+#cabecera #logo
+{
+width: 20px;
+vertical-align: middle;
+
 }
 #container
 {
